# minitorrent

./: Cargo.toml  diagram.json  wokwi.toml
.cargo/: config.toml
.github/workflows/: rust_ci.yml
bencode/src/: deserialize.rs  lib.rs
core-logic/: Cargo.toml
core-logic/src/: core.rs  fs.rs  lib.rs  metainfo.rs  torrent.rs  wifi.rs
core-logic/src/core/: metainfo.rs  net.rs  tracker.rs
core-logic/src/fs/: operations.rs  torrent_retrieval.rs
core-logic/tests/: fs.rs  integration_test.rs
core-logic/tests/fs_duples/: mod.rs
core-logic/tests/wifi_helper/: mod.rs
esp-app/: Cargo.toml  wokwi.toml
esp-app/.cargo/: config.toml
esp-app/src/: lib.rs  setup.rs
esp-app/src/fs/: mod.rs
esp-app/src/fs/sd_card/: mod.rs  volume_mgr.rs
esp-app/src/torrent_retrieval/: mod.rs
esp-app/src/wifi/: mod.rs  network.rs  setup.rs
src/fs/: mod.rs
src/fs/sd_card/: mod.rs  volume.rs
