[package]
name = "core-logic"
version = "0.1.0"
edition = "2024"

[dependencies]
bencode = { path = "../bencode" }
defmt = "1.0.1"
sha1_smol = "1.0.1"
embedded-sdmmc = { version = "0.9.0", default-features = false, features = [
    "defmt-log",
] }

[dev-dependencies]
chrono = "0.4"
tokio = { version = "1", features = ["macros", "rt"] }
fatfs = "0.3.6"
mbrman = "0.6.1"
hex = "0.4.3"
reqwest = "0.13.1"